# interviewing-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  SPRINTS.md  TASKS.md  THIRD_PARTY_NOTICES.md  WALKTHROUGH.md  package-lock.json  package.json  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: README.md  pyproject.toml
apps/api/data/: question_bank.jsonl
apps/api/src/interviewing_agent/: __init__.py  config.py  main.py  models.py  prompts.py
apps/api/src/interviewing_agent/routes/: audio.py  dependencies.py  health.py  interviews.py  resumes.py  uploads.py
apps/api/src/interviewing_agent/services/: access_control.py  audio.py  evaluation.py  interview_engine.py  openai_client.py  persistence.py  question_bank.py  resume_parser.py
apps/api/tests/: test_access_control.py  test_config.py  test_e2e_mvp.py  test_evaluation_calibration.py  test_interview_engine.py  test_persistence_privacy.py  test_question_bank.py  test_resume_parser.py  test_service_errors.py  test_upload_validation.py
apps/api/tests/fixtures/: evaluation_cases.json
apps/web/: eslint.config.mjs  next.config.ts  package.json
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md  limitations.md  release-checklist.md  security.md  testing.md
docs/decisions/: README.md
scripts/: bootstrap_supabase_runtime.py  build_ml_question_bank.py  build_question_bank_embeddings.py  hosted_smoke_test.mjs  hosted_web_smoke_test.mjs
supabase/: schema.sql
(+20 files in other folders)
